# CollectiveTrace

./: .gitignore  Cargo.toml  README.md  pyproject.toml  requirements.txt
benches/: parse_bench.rs
collectivetrace/: .gitignore
fixtures/: generate_fixture.py
python/benchmarks/: bench_vs_python.py
python/collectivetrace/: __init__.py
python/tests/: test_parse.py
src/: lib.rs  parser.rs
tests/: parse_test.rs
