[package]
name = "collectivetrace"
version = "0.1.0"
edition = "2021"

[lib]
name = "collectivetrace"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "=3.8.1"

[[bench]]
name = "parse_bench"
harness = false
